Correction scrollbar check V2

--- a/style.css
+++ b/style.css
@@ -248,6 +248,7 @@ a{
      margin: 1em;
 }
 .description-menu{
+    
     cursor: pointer;
     margin-left: 1em;
     margin-right: 2em;
@@ -257,8 +258,8 @@ a{
     border-radius: 1.5em;
     box-shadow: 2px 2px 9px #e9e9e9;
     
-    -webkit-animation: glissement .5s .3s ease-in both,transform .3s;       /*,transform .3s à enlever */
-    animation: glissement .5s .3s ease-in both,transform .3s;               /*,transform .3s à enlever */
+    -webkit-animation: glissement .5s .3s ease-in both;       /*,transform .3s à enlever */
+    animation: glissement .5s .3s ease-in both;               /*,transform .3s à enlever */
 }
 .description-menu2{
     cursor: pointer;
@@ -270,8 +271,8 @@ a{
     border-radius: 1.5em;
     box-shadow: 2px 2px 9px #e9e9e9;
     
-    -webkit-animation: glissement 1s .3s ease-in both,transform .3s;
-    animation: glissement 1s .3s ease-in both,transform .3s;        
+    -webkit-animation: glissement 1s .3s ease-in both;
+    animation: glissement 1s .3s ease-in both;        
 }
 .description-menu3{
     cursor: pointer;
@@ -282,8 +283,8 @@ a{
     padding-bottom: 1em;
     border-radius: 1.5em;
     box-shadow: 2px 2px 9px #e9e9e9;
-    -webkit-animation: glissement 1.5s .3s ease-in both,transform .3s;
-    animation: glissement 1.5s .3s ease-in both,transform .3s;      
+    -webkit-animation: glissement 1.5s .3s ease-in both;
+    animation: glissement 1.5s .3s ease-in both;      
 }
 .description-menu4{
     cursor: pointer;
@@ -294,8 +295,8 @@ a{
     padding-bottom: 1em;
     border-radius: 1.5em;
     box-shadow: 2px 2px 9px #e9e9e9;
-    -webkit-animation: glissement 2s .3s ease-in both,transform .3s;  
-    animation: glissement 2s .3s ease-in both,transform .3s;      
+    -webkit-animation: glissement 2s .3s ease-in both;  
+    animation: glissement 2s .3s ease-in both;      
 }
 .description-menu5{
     cursor: pointer;
@@ -306,8 +307,8 @@ a{
     padding-bottom: 1em;
     border-radius: 1.5em;
     box-shadow: 2px 2px 9px #e9e9e9;
-    -webkit-animation: glissement 2.5s .3s ease-in both,transform .3s;
-    animation: glissement 2.5s .3s ease-in both,transform .3s;      
+    -webkit-animation: glissement 2.5s .3s ease-in both;
+    animation: glissement 2.5s .3s ease-in both;      
 }
 .description-menu6{
     cursor: pointer;
@@ -318,8 +319,8 @@ a{
     padding-bottom: 1em;
     border-radius: 1.5em;
     box-shadow: 2px 2px 9px #e9e9e9;
-    -webkit-animation: glissement 3s .3s ease-in both,transform .3s;
-    animation: glissement 3s .3s ease-in both,transform .3s;      
+    -webkit-animation: glissement 3s .3s ease-in both;
+    animation: glissement 3s .3s ease-in both;      
 }
 .description-menu7{
     cursor: pointer;
@@ -330,8 +331,8 @@ a{
     padding-bottom: 1em;
     border-radius: 1.5em;
     box-shadow: 2px 2px 9px #e9e9e9;
-    -webkit-animation: glissement 3.5s .3s ease-in both,transform .3s;
-    animation: glissement 3.5s .3s ease-in both,transform .3s;      
+    -webkit-animation: glissement 3.5s .3s ease-in both;
+    animation: glissement 3.5s .3s ease-in both;      
 }
 .description-menu8{
     cursor: pointer;
@@ -342,8 +343,8 @@ a{
     padding-bottom: 1em;
     border-radius: 1.5em;
     box-shadow: 2px 2px 9px #e9e9e9;
-    -webkit-animation: glissement 4s .3s ease-in both,transform .3s;
-    animation: glissement 4s .3s ease-in both,transform .3s;      
+    -webkit-animation: glissement 4s .3s ease-in both;
+    animation: glissement 4s .3s ease-in both;      
 }
     
 .description-menu9{
@@ -355,8 +356,8 @@ a{
     padding-bottom: 1em;
     border-radius: 1.5em;
     box-shadow: 2px 2px 9px #e9e9e9;
-    -webkit-animation: glissement 4.5s .3s ease-in both,transform .3s;
-    animation: glissement 4.5s .3s ease-in both,transform .3s;      
+    -webkit-animation: glissement 4.5s .3s ease-in both;
+    animation: glissement 4.5s .3s ease-in both;      
 }
     
 .description-menu10{
@@ -368,8 +369,8 @@ a{
     padding-bottom: 1em;
     border-radius: 1.5em;
     box-shadow: 2px 2px 9px #e9e9e9;
-    -webkit-animation: glissement 5s .3s ease-in both,transform .3s;
-    animation: glissement 5s .3s ease-in both,transform .3s;      
+    -webkit-animation: glissement 5s .3s ease-in both;
+    animation: glissement 5s .3s ease-in both;      
 }
 @keyframes glissement {
     0%{ 
@@ -449,15 +450,18 @@ a{
     /*_______________________ Animation-caché_______________*/
     
 .animation-check{
+    
     padding: 1.7em;
-    height:41% ;
-    width: 10px;
-    position: absolute; 
-    left: 80%;
+    height:42px;
+    width: 5px;
+    position: absolute;
+    left: 85%;
     background-color: #99e2d0;
     border-radius: 0 1.5rem 1.5rem 0;
+    
+    
    
-    top:3%;
+    top:2%;
     opacity: 0; 
     transition: transform 0.5s ease-in-out;
 	-moz-transition: -moz-transform 0.5s ease-in-out;
@@ -465,6 +469,7 @@ a{
 	-webkit-transition: -webkit-transform 0.5s ease-in-out;
     		  
 }
+
     
 .fa-check-circle { 
     font-weight:bold;  
@@ -523,8 +528,12 @@ a{
 .description-menu9:hover > .animation-check,
 .description-menu10:hover > .animation-check{ 
     opacity:1;
-    transform: translateX(-40px); 
-    width: auto;  
+    transform: translateX(-45px); 
+    width: 40px;
+     
+     
+    
+    
 }
 
 .description-menu:hover .prix,
